@@ -3,6 +3,8 @@ CHANGES.txt - 2011-05-10
 
 CHANGES IN CUPS V1.5b1
 
+	- The lpadmin command now allows default option values to be deleted
+	  (STR #2959)
 	- The lpadmin command now allows the cupsIPPSupplies and
 	  cupsSNMPSupplies keywords to be set in a PPD file (STR #3825)
 	- Moving a held job no longer releases it (STR #3839)
